Search & Replace: Fix replace background color (regression introduced in v5.22)

BUG: 363441
REVIEW: 128035